fix(axe): dark header contrast improvement

--- a/wowchemy/assets/scss/wowchemy/_dark.scss
+++ b/wowchemy/assets/scss/wowchemy/_dark.scss
@@ -29,7 +29,7 @@ body.dark,
 .dark h4,
 .dark h5,
 .dark h6 {
-  color: rgb(152, 166, 173);
+  color: #fff;
 }
 
 .dark pre,
